--- a/webrtc-demo/package.json
+++ b/webrtc-demo/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-use-websocket": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
