--- a/webrtc/user_server/package.json
+++ b/webrtc/user_server/package.json
@@ -12,7 +12,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-use-websocket": "^3.0.0"
+    "react-use-websocket": "^3.0.0",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/node": "^20",
