--- a/webrtc/user_server/package.json
+++ b/webrtc/user_server/package.json
@@ -12,7 +12,11 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
+    "react-spring": "^9.7.3",
+    "react-use-gesture": "^9.1.3",
     "react-use-websocket": "^3.0.0",
+    "uuid": "^9.0.1",
     "ws": "^8.16.0"
   },
   "devDependencies": {
