--- a/webrtc/user_server/package.json
+++ b/webrtc/user_server/package.json
@@ -21,6 +21,7 @@
     "ws": "^8.16.0"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
