--- a/webrtc/user_server/package.json
+++ b/webrtc/user_server/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "canvas-confetti": "^1.9.2",
     "crypto-browserify": "^3.12.0",
     "next": "14.1.0",
     "react": "^18",
